<resources>
    <string name="app_name">swoosh</string>
    <string name="background_image">background image</string>
    <string name="desired_league">Desired League</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="co_ed">CO-ED</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="get_started">Get Started</string>
    <string name="beginner">Beginner</string>
    <string name="baler">Baler</string>
    <string name="i_am_a">I am a</string>
    <string name="finish">Finish</string>
    <string name="logo">logo</string>
    <string name="next">Next</string>
    <string name="searchLeague">TextView</string>
</resources>